--- a/src/style.css
+++ b/src/style.css
@@ -46,3 +46,52 @@ body {
   border-radius: 8px;
   margin-right: 40px;
 }
+
+.fa-location-icon {
+  color: #f55a5a;
+  width: 14px;
+  height: 20px;
+  margin-right: 8px;
+}
+
+.location-country {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+  margin-right: 28px;
+}
+
+.location > a {
+  color: #918e9b;
+  font-size: 20px;
+  line-height: 12px;
+  text-decoration: underline;
+  letter-spacing: 1px;
+}
+
+.location-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 50px;
+  color: #2b283a;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  height: 80px;
+}
+
+.date {
+  margin-top: 14px;
+  margin-bottom: 14px;
+  font-weight: 700;
+  font-size: 20.24px;
+  line-height: 12px;
+  color: #2b283a;
+}
+
+.description {
+  font-weight: 400;
+  font-size: 20.24px;
+  line-height: 150%;
+}
