--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,11 @@ body {
   color: #2b283a;
 }
 
+.date-dash {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
 .description {
   font-weight: 400;
   font-size: 20.24px;
